--- a/Max Kaye Webpage.html
+++ b/Max Kaye Webpage.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> Maximillian Ariel Kaye | Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="MKWEBPAGE css.css">
+    <link rel="stylesheet" type="text/css" href="max.css">
     <meta charset="utf-8">
  </head>
 
@@ -19,9 +19,6 @@
           </li>
           <li>
             <a href="#About">ABOUT ME</a>
-          </li>
-          <li>
-            <a href="#Blog">BLOG</a>
           </li>
           <li>
             <a href="#Contact">CONTACT</a>
@@ -46,13 +43,24 @@
         <p>
           "BuzzStar is a mobile application that ultimately improves the relationships between restaurants and their customers"
         </p>
-        <p> Technology Stack: JavaScript, CSS</p>
+        <p> Technology Stack: PHP, MongoDB, SQL</p>
         <p class="button">
           <a href="https://www.youtube.com/watch?v=FeFdpBHu78w">Show me the Pitchdeck!</a>
         </p>
         <p class="button">
           <a href="">Here's the code</a>
         </div>
+
+        <h3>Mongo Mandarin Dictionary</h3>
+        <p>
+          Become fluent in Mandarin Chinese by going through the words and interacting with my slackbot!
+        </p>
+
+        <p> Technology Stack: MongoDB, Express, Angular, Javascript, CSS</p>
+
+        <p class="button">
+          <a href="http://localhost:3001/">Show me the Dictionary!</a>
+        </p>
     </section>
 
     <section id="About">
@@ -63,21 +71,18 @@
         <p>
             A unique understanding of the Chinese Marketplace and expertise in behavioral financial decision making
         </p>
-        <p> I am currently consulting struggling businesses and startups. My background includes a BA in Behavioral Economics and Chinese from Swarthmore College, where I conducted research on healthcare and consumer choice with author of "Paradox of Choice", Barry Schwartz. Afteexploring the surronding Philadelphia community I realized that small businesses and even students can become victims of poor decision -making, especialy when faced with a lack of resources. My goal is to solve these problems, and create win-win solutions on a multi-national scale.
+        <p> I am currently consulting struggling businesses and startups. My background includes a BA in Behavioral Economics and Chinese from Swarthmore College, where I conducted research on healthcare and consumer choice with author of "Paradox of Choice", Barry Schwartz. After exploring the surronding Philadelphia community I realized that small businesses and even students can become victims of poor decision -making, especialy when faced with a lack of resources. My goal is to solve these problems, and create win-win solutions on a multi-national scale.
         </p>
-        <div class="icons">
-          <a class="linkedin" href="https://www.linkedin.com/in/max-kaye-bb12bb79">LinkedIn</a>
-          <a class="github" href="https://github.com/MaxKaye">GitHub</a>
-        </div>
-      </div>
+
     </section>
 
-    <section id="Blog">
-      <h2>Blog</h2>
-    </section>
-
-    <section id="Contact">
+  <section id="Contact">
       <h2>Contact Me</h2>
+      <div class="icons">
+        <a class="linkedin" href="https://www.linkedin.com/in/maximillian-kaye-bb12bb79">LinkedIn</a>
+        <a class="github" href="https://github.com/MaxKaye">GitHub</a>
+      </div>
+    </div>
       <div id="contactform">
     </body>
   </head>
